# google-streetview-hunter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-tests.yml
configs/: default.yaml  moscow.yaml  syktyvkar.yaml
examples/: basic_usage.py  batch_processing.py  city_profiles.py
streetview_hunter/: cli.py  core.py  init.py  utils.py
tests/: test_core.py  test_utils.py
