[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "streetview-hunter"
version = "1.0.0"
description = "Автоматический сборщик панорам Google Street View"
readme = "README.md"
authors = [
    {name = "Иван Засухин", email = "ivanzasukhin11@gmail.com"}
]
license = {text = "MIT"}
keywords = ["google", "street-view", "maps", "panorama", "gis", "geolocation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.28.0",
    "PyYAML>=6.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "pre-commit>=3.0.0",
    "tqdm>=4.65.0"
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/IvanZasukhin/google-streetview-hunter"
BugTracker = "https://github.com/IvanZasukhin/google-streetview-hunter/issues"
Source = "https://github.com/IvanZasukhin/google-streetview-hunter"

[project.scripts]
streetview-hunter = "streetview_hunter.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["streetview_hunter*"]
exclude = ["tests*", "examples*"]

[tool.setuptools.package-data]
streetview_hunter = ["configs/*.yaml"]

[tool.black]
line-length = 88
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests"
]
